--- a/k8s-manifests/argocd/application.yaml
+++ b/k8s-manifests/argocd/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/EngMohamedElEmam/argocd-example-apps'
+    repoURL: 'https://github.com/imomou/argocd-sonar'
     path: '.'
     targetRevision: HEAD
   destination:
